# poetrycli

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mycli.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  codeql.yaml  codeql.yml
scripts/: template.py
src/mycli/: __main__.py  cli.py  mycli.py
src/mycli/cli/: clibase.py  randomcommand.py
src/mycli/core/: example.py
src/mycli/resources/: __init__.py  config.py
src/mycli/utils/: logging.py
tests/: mycli_test.py  test_cli.py
tests/cli/: clibase_test.py  randomcommand_test.py
tests/resources/: __init__.py  config_test.py
tests/utils/: logging_test.py
tests_integration/: test_installed_cli.py
