# SPDX-FileCopyrightText: 2026 Daniel Balparda <balparda@github.com>
# SPDX-License-Identifier: Apache-2.0
# pyproject.toml (preferred for new projects, PEP 621)

# TODO: FIRST pick PYTHON VERSION; there are AT LEAST 6 places in this file that depend on this

####################################################################################################
[project]

name = "mycli"     # TODO: app name, and also rename src/mycli directory to match
version = "0.1.0"  # also update src/mycli/__init__.py  # TODO: app initial version

description = "Python CLI app"  # TODO: app description
license = "Apache-2.0"  # TODO: correct license? if not, change: LICENSE and here and README.md
authors = [
  { name = "Daniel Balparda", email = "balparda@github.com" },
  { name = "BellaKeri", email = "BellaKeri@github.com" },
  # TODO: ... add authors ...
]
classifiers = [  # see: https://pypi.org/classifiers/
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",  # TODO: python VERSION; pick correct one
  "Operating System :: OS Independent",
  "Topic :: Utilities"
  # TODO: ... add others ...
]

requires-python = ">=3.12"  # TODO: python VERSION; pick correct one
readme = "README.md"
license-files = ["LICENSE"]

####################################################################################################
[project.urls]

Homepage = "https://github.com/balparda/mycli"
Repository = "https://github.com/balparda/mycli"
Issues = "https://github.com/balparda/mycli/issues"
Changelog = "https://github.com/balparda/mycli/blob/main/CHANGELOG.md"

# PyPI = "https://pypi.org/project/transcrypto/"

####################################################################################################
[tool.poetry]

requires-poetry = "^2.1"

packages = [{ include = "mycli", from = "src" }]  # TODO: rename `mycli` part

####################################################################################################
[tool.poetry.dependencies]

python = "^3.12"  # if version changes, remember to change README.md  # TODO: python VERSION; pick correct one
typer = { version = "^0.21", extras = ["all"] }
platformdirs = "^4.5"
rich = "^14.2"

[tool.poetry.group.dev.dependencies]

pytest = "^9.0"
pytest-cov = "^7.0"
ruff = "^0.14"
mypy = "^1.19"
pyright = "^1.1"
pre-commit = "^4.5"

[tool.poetry.scripts]

mycli = "mycli.cli:app"  # TODO: rename `mycli` part

####################################################################################################
[tool.ruff]

target-version = "py312"  # TODO: python VERSION; pick correct one
line-length = 100
indent-width = 2
src = ["scripts", "src", "tests"]

[tool.ruff.format]

quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.flake8-quotes]

inline-quotes = "single"

####################################################################################################
[tool.ruff.lint]

select = [
  "ALL",   # ALL rules --- if too strict comment this out and pick the ones you need below
#   "E",     # pycodestyle “errors” (basic correctness-ish style checks)
# 	"F",     # pyflakes (unused imports/vars, undefined names, etc.)
# 	"I",     # isort rules (import sorting)
# 	"UP",    # pyupgrade (suggest modern Python syntax)
# 	"B",     # flake8-bugbear (common bug patterns / footguns)
# 	"SIM",   # flake8-simplify (suggest simpler expressions)
#   "A",     # (builtins shadowing; e.g. naming a var list)
# 	"N",     # (naming conventions)
# 	"S",     # (security-ish checks from Bandit; can be noisy but useful)
# 	"DTZ",   # (timezone-naive datetime pitfalls)
# 	"TRY",   # (exception-handling best practices)
# 	"PERF",  # (performance footguns)
# 	"TCH",   # (type-checking import hygiene)
# 	"D",     # (docstring conventions / pydocstyle — only if you want docstring policing)
]

ignore = [
  "N802",  # allow PascalCase in method names
  "E111",  # allow 2-space indentation
  "E114",  # allow 2-space indentation
#  "D211",  # no-blank-line-before-class b/c conflicts w/ incorrect-blank-line-before-class D203
  "D203",  # incorrect-blank-line-before-class: may cause conflicts when used with the formatter
  "D213",  # multi-line-summary-second-line b/c conflicts w/ multi-line-summary-first-line D212
  "COM812",  # missing-trailing-comma: may cause conflicts when used with the formatter

  "TC002",    # checks for third-party imports that are only used for type annotations

  "FBT003",   # allows boolean positional value in function call
  "PLR0913",  # Too many arguments in function definition (N > 5)
  "PLR0917",  # Too many positional arguments (N/5)

  "TRY003",  # Avoid specifying long messages outside the exception class
  "EM102",   # Exception must not use an f-string literal, assign to variable firs

  "TD002",   # allow TODOs without authors
  "TD003",   # allow TODOs without bugs
  "FIX002",  # fix the todos...  # TODO: remove this line: you usually want this

  "LOG015",  # allows for calls into top-level logging methods
  "G004",    # allows logging statements to use f-string
]
# ignore = [ "E125", "E129", "E501"]

preview = true  # if you want new features being previewed

[tool.ruff.lint.per-file-ignores]

"tests/**/*.py" = ["S101"]

####################################################################################################
[tool.mypy]

python_version = "3.12"  # TODO: python VERSION; pick correct one
mypy_path = ["src"]

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
check_untyped_defs = true
no_implicit_reexport = true

strict = true

####################################################################################################
[tool.pyright]

typeCheckingMode = "strict"
pythonVersion = "3.12"  # TODO: python VERSION; pick correct one
venvPath = "."
venv = ".venv"

include = ["scripts", "src", "tests"]
exclude = [
  "**/.venv",
  "**/__pycache__",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/dist",
  "**/build",
]

####################################################################################################
[tool.pytest.ini_options]

addopts = "-q"
testpaths = ["tests"]
